--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ header h1 {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+  grid-template-columns: repeat(auto-fit,5, 1fr);
   gap: 20px;
   padding: 40px;
   max-width: 1200px; /* adjust overall width */
