--- a/style.css
+++ b/style.css
@@ -110,8 +110,19 @@ header h1 {
   box-shadow: 0 0 10px #ff2d2d;
 }
 
-/* Normal portrait view */
-body {
-  margin: 0;
-  padding: 0;
+/* Force portrait when phone is in landscape */
+@media screen and (orientation: landscape) {
+  html, body {
+    width: 100vh;     /* swap width/height */
+    height: 100vw;
+    overflow-x: hidden;
+    overflow-y: auto; /* allow vertical scroll */
+  }
+  body {
+    transform: rotate(90deg);
+    transform-origin: left top;
+    position: absolute;
+    top: 0;
+    left: 100%;
+  }
 }
