--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   width: 600px;
   height: 600px;
   background: url("images/logo1.gif") no-repeat center;
-  background-size: contain;
+  background-size: cover;
   opacity: 0.05;
   transform: translate(-50%, -50%) scale(1);
   animation: pulse 8s infinite ease-in-out;
